wp-content/themes/redcross/src/sass/_header.scss
/** Header **/

//sizes 
$mobile_height : 54px;
$full_height   : 62px;
$red_cross  : 42px;

//layout
.site-header {
	position: absolute;
	width: 100%;
	top: 0;
	left: 0;
	background: $color-white;
	border-bottom: 1px solid $color-border-normal;
	@include transition(opacity 0.3s);
	
	&.fixed-header {
		position: fixed;
		width: 100%;
		top: 0;
		left: 0;
		z-index: 500;
		opacity: 1;
	}
	
	.admin-bar & {
		@media screen and (min-width: 600px) { top: $adminbar_small_screen; }
		@media screen and (min-width: 783px) { top: $adminbar_large_screen; }		
	}
	
	&.invisible {
		opacity: 0;
	}
}

.site-content {
	padding-top: $mobile_height + 1px;
	
	@include for(medium-screens) {
		padding-top: $full_height + 1px;
	}
}

.site-panel-row {
	display: flex;
	flex-flow: row nowrap;	
}

.site-panel-cell {
	
	&.site-branding {
		width: $mobile_height;
		flex: 0 0 auto;
		
		@include for(small-screens) {
			width: auto;
		}		
	}
	
	&.site-details {
		flex: 1 1 auto;
	}
	
	&.newsletter {
		flex: 0 0 auto;		
	}
	
	&.menu {
		width: $mobile_height;		
		flex: 0 0 auto;
		
		@include for(medium-screens) {
			width: $full_height;
		}
	}
}


// branding part
//brand titles - general part
.logo-name {
	text-transform: uppercase;		
	line-height: 1;
	color: $color-link-three;
}

h1.logo-name {
	font-family: $heading;		
	font-size: 18px;		
	letter-spacing: -0.3px;
	
	@include for(medium-screens) {
		font-size: 19px;			
	}
}

h2.logo-name {
	font-size: 12px;
	font-family: $body;		
	letter-spacing: 0.5px;
	padding-top: 4px;
	
	@include for(medium-screens) {
		padding-top: 6px;
	}
}


.site-branding {
	
	.site-logo {
		display: block;
		position: relative;
		color: $color-link-three;
		
	}
	
	#logo {
		width: $mobile_height;
		height: $mobile_height;
		text-align: center;
				
		.pic-logo {
			width: 42px;
			height: 42px;
			margin-top: ($mobile_height - $red_cross)/2;
		}
		
		position: absolute;
		left: 0;
		top: 0;
		
		@include for(medium-screens) {
			width: $full_height;
			height: $full_height;
			
			.pic-logo {
				margin-top: ($full_height - $red_cross)/2;
			}
		}
	}
	
	.logo-name {
		display: none;
			
		@include for(small-screens) {
			display: block;
			margin-left: $mobile_height*2 - $red_cross;
		}	
	}
	
	h1.logo-name {		
		padding-top: 10px;		
		
		@include for(medium-screens) {			
			padding-top: 13px;
		}
	}
}



//contacts
.site-details {
	min-width: 1px;
	p { display: none; }
	
	@include for(medium-screens){
		text-align: right;
		
		p {
			display: inline-block;
			height: 100%;
			border-left: 1px solid $color-border-normal;			
			padding: 13px 18px 0 18px;
			color: $color-text-light;
			@include nav-text(multiline);
			text-transform: none;
			
			
			a {
				color: inherit;
				display: inline-block;
				border-bottom: 1px solid;
			}
		}
	}
}

//buttons
.trigger-button {
	height: $mobile_height;
	cursor: pointer;
	@include transition(all 0.3s);
	
	&:hover {
		background: $color-secondary;
	}
	
	&.newsletter {
		@include  nav-text();
		font-size: 13px;		
		color: $color-white;
		position: relative;
		margin-right: 1px;
				
		a {
			display: block;
			color: inherit;
			padding: 0 18px;
			@include calc(height, '100% + 1px');			
			padding-top: ($mobile_height - 14px) /2;
			background: $color-link-three;
			position: relative;
			bottom: -1px;
			top: 0;
			z-index: 100;
			
			&:hover {
				background: $color-link-two;
			}
		}
				
		.svg-icon {
			width: 13px;
			height: 13px;
			fill: $color-white;
			margin-left: 8px;
		}
	
		.icon-close {
			display: none; 
		}
	}
	
	.newsletter-open &.newsletter {
		
		a {
			background: $color-text-black;
			
			&:hover {
				background: $color-text-semi;
			}
		}
		.icon-mail {
			display: none; 
		}
		.icon-close {
			display: inline-block; 
		}
	}
	
	&.menu {
		text-align: center;		
		border-right: 1px solid $color-border-light;		
		cursor: pointer;
		
		#trigger_menu {
			display: block;
			border: none;
			width: $mobile_height;
			height: $mobile_height;
			padding: ($mobile_height - 18px)/2;
			text-align: center;
			background: transparent;
		}
		
		.svg-icon {
			width: 18px;
			height: 18px;
			fill: $color-text-black;
			pointer-events: none;
		}
	}
	
	@include for(medium-screens){
		height: $full_height;
		
		&.newsletter a { padding-top: ($full_height - 14px) /2; }
		&.menu #trigger_menu {
			padding: ($full_height - 18px)/2;
			width: $full_height;
			height: $full_height;
		}
	}
}



/** Main menu **/
.nav-overlay {
	display: none;
	background: rgba(0,0,0, 0.4);
	
	.menu-open & {
		display: block;
		z-index: 1000;
		position: fixed;
		top:0;
		left: 0;
		width: 100%;
		height: 100%;
	}
}

.searchform {
	width: 100%;
		
	input {
		@include nav-text();
		padding: $gut/2;
		color: $color-text;
		border: none;
		width: 100%;
		
		@include placeholder {
			color: $color-text-light;
		}
	}
}

.site-nav {
	display: block;
	z-index: 1020;
	position: fixed;
	top:0;
	right: -300px;
	width: 300px;
	height: 100%;
	background: $color-white;
	@include transition(all 0.4s);
	
	.admin-bar & {
		@media screen and (min-width: 600px) { top: $adminbar_small_screen; }
		@media screen and (min-width: 783px) { top: $adminbar_large_screen; }		
	}
	
	.menu-open & {
		right: 0;
	}
	
	.search-holder {
		.svg-icon { display: none; }
		border-bottom: 1px solid $color-border-light;
	}
	
	.social-menu {
		padding: $gut/2;
	}
}

.site-nav-title {
	border-bottom: 1px solid $color-border-light;
	position: realtive;
	height: $mobile_height;
	@include for(medium-screens) { height: $full_height; }
	
	.site-logo {
		display: block;		
		padding: $gut/2;
		padding-right: $full_height;
		padding-top: $gut/2 - 1px;
	}
	
	h1.logo-name {
		font-size: 16px;
	}
	
	.close {
		background: $color-text;
		width: $mobile_height;
		height: $mobile_height;
		position: absolute;
		top: 0;
		right: 0;
		padding: ($mobile_height - 18px)/2;
		text-align: center;
		cursor: pointer;
		
		@include for(medium-screens) {
			width: $full_height;
			height: $full_height;
			padding: ($mobile_height - 18px)/2;
		}
		
		.svg-icon {
			width: 18px;
			height: 18px;
			fill: $color-white;
		}
		
		&:hover {
			background: $color-text-semi;
		}
	}
}

.main-menu {
	
	li {
		border-bottom: 1px solid $color-border-light;
		position: relative;
		
		& > a {
			display: block;			
			padding: $gut/2;
			@include nav-text();
			color: $color-text-black;
			@include transition(all 0.3s);
			margin-right: 44px;
			
			&:hover, &:focus, &:active {
				background: $color-border-light;		
			}
		}
				
		.submenu-trigger { display: none; }		
	}
	
	.menu-item-has-children {
		.submenu-trigger {
			display: block;
			width: 44px;
			height: 44px;
			padding: 15px 0 0 15px;
			border-left: 1px solid $color-border-light;
			position: absolute;
			top: 0;
			right: 0;
			z-index: 100;
			cursor: pointer;
			
			.svg-icon {
				width: 14px;
				height: 14px;
				fill: $color-text-black;
			}
			.icon-up { display: none; }
		}
		
		ul.sub-menu .submenu-trigger { display: none; }
	}
	
	ul.sub-menu {
		display: none;
		background: $color-text;
		color: $color-white;
		
		li { border: none; }
		
		a {
			color: $color-white;
			margin-right: 0;
			
			&:hover, &:focus, &:active {
				background: $color-text-black;		
			}
		}
	}
	
	li.open {
		.submenu-trigger {
			background: $color-text;
			.icon-down { display: none; }
			.icon-up {
				display: inline-block;
				fill: $color-white;
			}
		}
		
		ul.sub-menu { display: block; }
	}
}


/** Newsletter **/
.newsletter-panel {
	display: none;
	position: absolute;
	width: 100%;
	left: 0;
	margin-top: 1px;
	background: $color-white;	
	border-bottom: 1px solid $color-border-normal;
	padding: $gut;
	z-index: 1000;
	
	.newsletter-form {
		margin: 0 auto;
	}
	
	.wpcf7-mail-sent-ok ,
	.wpcf7-validation-errors {
		
	}
	
	.newsletter-open & {
		display: block;		
	}
}

